# StructAgent

./: .env.example  .gitignore  NOTICE  README.md  lib_misc.py  lib_results_logger.py  lib_run_single.py  lib_run_single_text_answer.py  mind2web_eval.py  pyproject.toml  show_result.py  web_judge.py  web_judge_online_m2w.py
assets/: make_result_charts.py
desktop_env/: api_env.py  desktop_env.py
desktop_env/controllers/: python.py  setup.py
desktop_env/evaluators/getters/: __init__.py  chrome.py  cua_gym.py
desktop_env/evaluators/metrics/: __init__.py  cua_gym.py  slides.py
desktop_env/providers/docker/: provider.py
desktop_env/server/: main.py
docs/: CONFIG.md  ENVIRONMENT.md  MODELS.md  REPRODUCE.md
evaluation_examples/: test_mind2web.json  test_mind2web_test_domain_Info.json  test_mind2web_test_domain_Service.json  test_mind2web_test_website.json  test_nogdrive_sub1.json  test_nogdrive_sub2.json  test_nogdrive_sub3.json
evaluation_examples/examples/chrome/: a96b564e-dbe9-42c3-9ccf-b4498073438a.json  f3b19d1e-2d48-44e9-b4e1-defcae1a0197.json
evaluation_examples/examples/libreoffice_impress/: 05dd4c1d-c489-4c85-8389-a7836c4f0567.json  73c99fb9-f828-43ce-b87a-01dc07faa224.json  _EVAL_CONFIG_CHANGES.md
mm_agents/: README.md  model_endpoints.py
mm_agents/structagent/: __init__.py  _paths.py  config.py  loop.py
mm_agents/structagent/bbon/: __init__.py  (+3 more)
scripts/: docker-compose.vllm.yml  download_memory.py  rejudge_mind2web_online.py  run.sh  run_structagent.py  serve_qwen35_27b.sh  serve_qwen35_9b.sh
scripts/convert/: convert_mind2web_to_osworld.py
(+400 files in other folders)
